Changes to the conclusions and the appendices

--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -483,12 +483,13 @@ where $THL_{DAC}$ is the threshold DAC setting and $THL_{e-}$ the
 corresponding energy (in number of electrons). 
 
 \cref{fig:THLcalib_55-GNDGR-100} shows an example of the threshold
-calibration obtained for the assembly W5\_E2. Each point used for the
-fit corresponds to the mean of the Gaussian fitted to the derivative
-of the sigmoid function fitting the S-curve for all the diagonal
-pixels combined. The RMS of the mean is used as the error on the
-mean. The RMS represents the threshold dispersion from one pixel to
-another and corresponds to $\sim40$ electrons.  
+calibration obtained for the assembly W5\_E2 (see
+\cref{sec:appendixFE_electronics} for all the assemblies). Each point
+used for the fit corresponds to the mean of the Gaussian fitted to the
+derivative of the sigmoid function fitting the S-curve for all the
+diagonal pixels combined. The RMS of the mean is used as the error on
+the mean. The RMS represents the threshold dispersion from one pixel
+to another and corresponds to $\sim40$ electrons.
 
 \begin{figure}[htbp]
   \centering
