--- a/include/appendix_Calibration.tex
+++ b/include/appendix_Calibration.tex
@@ -1,39 +1,14 @@
 %------------------------------------------------------------------------------
-\chapter{Front-end electronics}
+\chapter{Pixel readout ASICs and assembly calibration}
 \label{sec:appendixFE_electronics}
 %------------------------------------------------------------------------------
 
-%% \section{Energy calibration}\label{sec:appendix_energy_calibration}
+The threshold DAC can be translated into an effective energy as
+described in
+\cref{ch:FE_electronics}. \cref{fig:Timepix3_THL_Calibration} shows
+the calibration for the assemblies listed in
+\cref{tab:Timepix3Assemblies}.
 
-%% \begin{figure}[htbp] \centering
-%%   \begin{subfigure}[b]{0.45\textwidth}
-%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0005_F01_thresh1153.pdf}
-%%     \caption{TOT calibration for W5\_F1, THL=1153.}
-%%     \label{fig:TOTcalibW5F1}
-%%   \end{subfigure}\hfill
-%%   \begin{subfigure}[b]{0.45\textwidth}
-%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0019_C07_thresh1148.pdf}
-%%     \caption{TOT calibration for W19\_C7, THL=1148.}
-%%     \label{fig:TOTcalibW19C7}
-%%   \end{subfigure}
-%% \end{figure}
-
-
-%% \begin{figure}[htbp] \centering
-%%   \begin{subfigure}[b]{0.45\textwidth}
-%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0019_G07_thresh1190.pdf}
-%%     \caption{TOT calibration for W19\_G7, THL=1190.}
-%%     \label{fig:TOTcalibW19G7}
-%%   \end{subfigure}\hfill
-%%   \begin{subfigure}[b]{0.45\textwidth}
-%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0019_L08_thresh1133.pdf}
-%%     \caption{TOT calibration for W19\_L8, THL=1133.}
-%%     \label{fig:TOTcalibW19L8}
-%%   \end{subfigure}
-%% \end{figure}
-
-
-\section{Threshold calibration}\label{sec:appendix_threshold_calibration}
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.45\textwidth}
     \includegraphics[width=0.9\textwidth]{./figures/Calibration/THLcalibration_W0019_G07.pdf}
@@ -70,6 +45,37 @@
     points and obtain the parameters $p$ and $q$.}
   \label{fig:Timepix3_THL_Calibration}
 \end{figure}
+
+%% \section{Energy calibration}\label{sec:appendix_energy_calibration}
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0005_F01_thresh1153.pdf}
+%%     \caption{TOT calibration for W5\_F1, THL=1153.}
+%%     \label{fig:TOTcalibW5F1}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0019_C07_thresh1148.pdf}
+%%     \caption{TOT calibration for W19\_C7, THL=1148.}
+%%     \label{fig:TOTcalibW19C7}
+%%   \end{subfigure}
+%% \end{figure}
+
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0019_G07_thresh1190.pdf}
+%%     \caption{TOT calibration for W19\_G7, THL=1190.}
+%%     \label{fig:TOTcalibW19G7}
+%%   \end{subfigure}\hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/Calibration/TOTcalibration_W0019_L08_thresh1133.pdf}
+%%     \caption{TOT calibration for W19\_L8, THL=1133.}
+%%     \label{fig:TOTcalibW19L8}
+%%   \end{subfigure}
+%% \end{figure}
+
+
 
 
 % \section{Application of the calibration to the test-beam data}\label{sec:appendixCalibDataG4}
