--- a/include/appendix_Telescope.tex
+++ b/include/appendix_Telescope.tex
@@ -4,8 +4,11 @@
 %------------------------------------------------------------------------------
 
 Biased residual distributions for the different telescope planes are
-shown here. The biased residual is defined as the distance between the
-reconstructed hit and the biased track fit.
+shown here. The biased residual on each telescope plane is defined as
+the difference between the measured hit and the fitted track
+position. A cut is applied to discard the tracks with $\chi^2$/NDF
+higher than 100.
+
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.3\textwidth}
