--- a/include/appendix_ThinSensors.tex
+++ b/include/appendix_ThinSensors.tex
@@ -100,6 +100,7 @@ in \cref{fig:clusterSize_vs_biasVoltage}.
   \label{fig:clusterSize_vs_biasVoltage}
 \end{figure}
 
+\newpage
 \subsection{Cluster size distribution as a function of the operating
   threshold}
 
