--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -644,7 +644,7 @@ author = "F. Krummenacher",
 
 
 @article{AlipourTehrani2016,
-title = "Recent results with HV-CMOS and planar sensors for the \{CLIC\} vertex detector ",
+title = "Recent results with HV-CMOS and planar sensors for the CLIC vertex detector ",
 journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
 volume = "",
 number = "",
@@ -697,4 +697,17 @@ abstract = "The ROOT system in an Object Oriented framework for large scale data
       pages          = "44-58",
       doi            = "10.1016/0168-9002(93)90255-G",
       SLACcitation   = "%%CITATION = NUIMA,A335,44;%%"
+}
+
+
+@article{Tehrani:2016ogb,
+      author         = "Tehrani, N. Alipour and others",
+      title          = "{Capacitively coupled hybrid pixel assemblies for the
+                        CLIC vertex detector}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A823",
+      year           = "2016",
+      pages          = "1-8",
+      doi            = "10.1016/j.nima.2016.03.072",
+      SLACcitation   = "%%CITATION = NUIMA,A823,1;%%"
 }
