--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -1,5 +1,5 @@
 % ==============================================================================
-\chapter{Conclusions}
+\chapter{Conclusions and outlook}
 \label{ch:conclusions}
 % ==============================================================================    
 
@@ -95,31 +95,35 @@ needed to be tested in order to draw final conclusions, especially, to
 confirm that the floating guard ring is the most suitable solution for
 $50\,\micron$ thick sensors.
 
-Miniaturisation of pixels is necessary for achieving a high spatial
-resolution of $3\,\micron$ as required by the CLIC vertex
-detector. But combined with thin planar sensors of $50\,\micron$, does
-not provide enough information through charge sharing in order to
-reach the required resolution. Also, bump-bonding of sensors to the
-readout ASICs becomes more complicated for downscaling pixel
-sizes. Other sensors solutions with High-Voltage (HV) CMOS process are
-considered for CLIC, which can be glued to the readout ASICs (instead
-of bump-bonding), and provide information through charge sharing.
+\section{Outlook}
+
+Miniaturisation of pixels to $25\,\micron$ pitch is necessary to
+achieve a high spatial resolution of $3\,\micron$ as required by the
+CLIC vertex detector. But thin planar sensors of $50\,\micron$, do not
+provide enough information through charge sharing in order to reach
+the required resolution. Also, bump-bonding of sensors to readout
+ASICs becomes more complicated for such small pixel sizes. Other
+sensors technologies, such as the High-Voltage (HV) CMOS
+process~\cite{Tehrani:2016ogb}, are under investigation for CLIC,
+which can be glued to the readout ASICs (instead of bump-bonding), and
+provide some information through charge sharing.
 
 Up to now, the full detector simulations for CLIC were done with a
 $3\,\micron$ hit resolution for the vertex detector. The extrapolation
-done in this thesis for $25\,\micron$ pitch and $50\,\micron$ planar
-sensors can be implemented in full simulations. The effect of a worse
-resolution on flavour-tagging can be studied and this might change the
-requirements on the CLIC vertex detector.
+done in this thesis for $25\,\micron$ pitch and $50\,\micron$ thick
+planar sensors can be taken as input for the digitisers in full
+simulations. The effect of a worse resolution on flavour-tagging can
+be studied and this might change the requirements on the spatial
+resolutions of the CLIC vertex detector.
 
 The two-dimensional TCAD simulation of active-edge sensors gives
 promising results and fulfills the expectations. The floating guard
 ring appears to be the most suitable solution, as it shows a high
 detection efficiency at the edge and an acceptable breakdown
-behaviour. A three-dimensional simulation can provide more precision
-on the capacitive coupling between the guard ring and the pixels. In
-data, new assemblies are needed to be tested in order to chose the
-best option of guard ring for thin sensors.
+behaviour. In the future, a three-dimensional simulation can provide
+more precision on the capacitive coupling between the guard ring and
+the pixels. In data, new assemblies are needed to be tested in order
+to confirm the best option of guard ring for thin sensors.
 
 % \begin{itemize}
 % \item Thin planar sensors reaching their limits: other solutions such
