--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -1436,18 +1436,25 @@ spatial resolution.
 
 
 %% --------------------------------------------------- %%
-\section{The $\eta$-correction method}
+\subsection{Hit position reconstruction using the $\eta$-correction method}
 \label{sec:EtaCorrection}
 
-Due to the charge sharing, particle tracks create multi-pixel
-clusters. The hit position within the pixel is reconstructed by using
-the charges of the hit pixels as weights. The method also takes into
-account non-linearities in the charge sharing between
-pixels~\cite{Belau:1983eh}.
+Previously, through simple examples, we have seen the benefits of
+charge sharing on the spatial resolution. In fact, due to the charge
+sharing, particle tracks create multi-pixel clusters. The amount of
+charge deposited in each pixel can be measured using an analogue
+readout. The $\eta$-correction method uses the charges in the hit
+pixels as weights to reconstruct the particle hit position within a
+pixel. This method also takes into account non-linearities in the
+charge sharing between pixels~\cite{Belau:1983eh}.
 
-The $\eta$-correction method calculates the distance with which the
-hit position moves from the geometric centre of two pixels in a
-cluster.
+This method can be implemented in different ways for the hit
+reconstruction. In this thesis, the method as described
+in~\cite{AlipourTehrani:2133128} is used for the data and simulations
+reconstruction and summarised in the following. The $\eta$-correction
+method calculates the distance with which the hit position moves from
+the geometric centre of two pixels in a cluster. Thi shift is
+calculated as:
 
 \begin{equation}
   \text{shift}=\sigma_{EC} \times \text{erf}^{-1}(2\times Q_{rel}-1) \; ,
@@ -1464,8 +1471,8 @@ defined as erf\textsuperscript{-1} (z) with:
   \label{eq:EtaCorrectionErf}
 \end{equation}
 
-In \cref{eq:EtaCorrectionShift}, $Q_{rel}$ is the maximum charge of
-the cluster divided by the total charge of the cluster
+In \cref{eq:EtaCorrectionShift}, $Q_{rel}$ is the charge of the pixel
+with the highest charge divided by the total charge of the cluster
 ($Q_{max}/Q_{tot}$).
 
 
