--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -1033,14 +1033,14 @@ The instantaneous current on the electrode k is given by:
 
   \cref{fig:RamoTCAD} shows the weighting field and potential
   distributions calculated using TCAD simulations~\cite{synopsysTCAD}
-  (c.f. \cref{sec:TCAD}). For this study, we consider a silicon sensor
-  with 5 pixels (marked out with dashed lines), having a thickness of
-  200~\micron and over-depleted with a bias voltage of \SI{50}{\volt}
-  on the back-side. First, \SI{0}{\volt} is applied to all the
-  electrodes and then \SI{1}{\volt} is applied to the
+  (c.f. \cref{sec:TCAD}). For this study, we consider a p-in-n silicon
+  sensor with 5 pixels (marked out with dashed lines), having a
+  thickness of 200~\micron and over-depleted with a bias voltage of
+  \SI{50}{\volt} on the back-side. First, \SI{0}{\volt} is applied to
+  all the electrodes and then \SI{1}{\volt} is applied to the
   electrode~$k$. By subtracting the electric field and the
   electrostatic potential in the two configurations, the weighting
-  field and potential are obtained. 
+  field and potential are obtained.
 
   The gradient of the weighting potential gets higher by getting
   closer to the pixel. This indicates that the pixel is more sensitive
