--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,17 @@
 % ============================================================================== 
 \chapter*{Résumé}
 % ============================================================================== 
-Ceci est un  
+
+Le Compact Linear Collider (CLIC), ou Collisionneur Linéaire Compact,
+est un accélérateur de particules qui permet d'effectuer des
+collisions entre des électrons et positrons à des énergies de l'ordre
+de quelques \tev. Le CLIC, est une des options à réaliser après le
+LHC, et qui pourrait être complémentaire aux expériences du LHC pour
+la découverte de la physique au-delà du modèle standard et de réaliser
+des mesures plus précises sur le boson de Higgs par exemple.
+
+Un détecteur de haute précision est en cours de développement afin
+d'atteindre les objectifs de découvertes pour CLIC. Cette thèse se
+concentre sur la conception du sous-détecteur le plus proche de la
+point d'interaction des particules: le détecteur de vertex. le pixel
+détecteur à silicium pour
