--- a/abstract.tex
+++ b/abstract.tex
@@ -24,13 +24,13 @@ characterised during test beams at the CERN SPS. A
 \textsc{Geant4}-based simulation framework, AllPix, has been set up in
 order to understand the charge deposition spectrum in such thin
 sensors and the charge sharing between neighbouring pixels. Data are
-as well used to validate the AllPix simulations. The latter offers the
+as well used to validate the AllPix simulation. The latter offers the
 flexibility to integrate any geometry of pixel detectors and simulate
 the whole experimental setup such as a test-beam. Therefore, it is
 used to calculate the tracking resolution of the Timepix3 beam
 telescope. It is also employed to predict the resolution that can be
 achieved for a pixel detector of $25\,\micron$ pitch bump-bonded to a
-thin sensor of $50\,\micron$ aimed for CLIC, where data is still
+thin sensor of $50\,\micron$ aimed for CLIC, where data are
 unavailable.
 
 
@@ -39,15 +39,13 @@ keeping the material budget as low as possible. This prevents overlaps
 between pixel detectors while tiling them into ladders. Also, the
 detectors must be able to detect up to their physical edges. The
 active-edge technology allows for growing the depletion volume up to
-the physical edges of silicon sensors and minimise the inactive
+the physical edges of silicon sensors and minimise inactive
 regions. The thin-sensor prototypes tested in test-beam also contain
 active edges with different configurations. The efficiency of
 detection at the edge is characterised in test-beams. Technology
 Computer-Aided Design (TCAD) simulations are also implemented to
 simulate the fabrication of such devices and their
 operation. Simulations are compared to the data for different
-configurations.
-
-Finally, conclusions are given based on the collected data and the
-different types of simulations performed for thin and active-edge
+configurations. Conclusions are given based on the collected data and
+the different types of simulations performed for thin and active-edge
 planar sensors.
