[Introduction] Re-read

--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -21,9 +21,9 @@ detectors in high-energy physics experiments, consists of several
 sub-detectors. The innermost sub-detector, which is the closest to the
 interaction point, is a silicon pixel detector with three double-sided
 layers in the barrel region and a spiral geometry in the endcap
-region. Its main goal is distinguishing heavy quarks from
+region. Its main goal is to distinguish heavy quarks from
 light-flavoured quarks through a precise measurement of their
-displaced decay vertex. The precision physics requirements set
+displaced decay vertices. The precision physics requirements set
 challenging demands for the vertex detector in terms of spatial
 resolution, material budget with efficient heat removal from sensors
 and readout and also, timing resolution. The CLIC vertex detector R\&D
@@ -41,23 +41,23 @@ In this thesis, the feasibility of thin pixelated planar silicon
 sensors for operation in the CLIC vertex detector is
 studied. Assemblies with $50\,\micron$ to $150\,\micron$ thick sensors
 are bump bonded to Timepix3 readout ASICs~\cite{Timepix3Poikela} with
-a pixel size of $55\,\micron$. Assemblies are tested during test-beam
-campaigns at the CERN SPS. Data is used for the charcterisation of the
-prototypes in terms of energy deposition, charge sharing and spatial
-resolution in such thin
-sensors. \textsc{Geant4}-based~\cite{Agostinelli:2002hh} simulations
-are used for a better understanding of thin sensors and validated with
-data. The simulation is then extrapolated for smaller pixels of
-$25\,\micron$ where data are not fully available. This gives a hint on
-the spatial resolution which can be achieved for the CLIC vertex
-detector.
+a pixel size of $55\,\micron$. These assemblies are tested during
+test-beam campaigns at the CERN SPS. Data are used for the
+charcterisation of the thin sensors in terms of energy deposition,
+charge sharing and spatial
+resolution. \textsc{Geant4}-based~\cite{Agostinelli:2002hh}
+simulations are used for a better understanding of thin sensors and
+validated with data. The simulation is then extrapolated for smaller
+pixels of $25\,\micron$ where data are not fully available. This gives
+a hint on the spatial resolution which can be achieved for the CLIC
+vertex detector using a planar sensor technology.
 
-Active-edge sensors allow for seamless tiling of pixel sensors of a
-vertex detector by depleting the sensors up to their physical
-edges. This allows for high coverage without creating overlaps between
-the pixel sensors and therefore reduces the material content of the
-detector. Measurements of prototypes and corresponding finite-element
-TCAD simulations are performed to compare the performance of different
+Active-edge sensors allow for seamless tiling of pixel sensors by
+depleting the sensors up to their physical edges. In a vertex
+detector, this allows for high coverage without creating overlaps
+between the pixel sensors and therefore reduces the material
+content. Measurements of prototypes and corresponding finite-element
+TCAD simulations are performed to compare the efficiency of different
 active-edge sensor layouts, resulting in a proposal for a suitable
 layout.
 
@@ -67,7 +67,7 @@ layout.
 % measurements and simulations and an optimal solution is proposed.
 
 This thesis is structured as follows. \cref{ch:CLIC} describes the
-CLIC experiment. The accelerator is briefly introduced and the
+CLIC experiment. The accelerator is briefly introduced. The
 requirements on the CLIC detector, with a focus on the vertex
 detector, are given. The flavour-tagging performance is studied for
 different geometries of the vertex detector.
@@ -95,11 +95,12 @@ with a $50\,\micron$ thick pixel detector is extrapolated using the
 simulations.
 
 The performance of active-edge sensors is discussed in
-\cref{ch:ActiveEdgeSensors}. Different designs for the guard ring are
-considered. Test-beam results are compared to TCAD simulations.
+\cref{ch:ActiveEdgeSensors}. Different designs for the guard ring at
+the edge are considered. Test-beam results are compared to TCAD
+simulations.
 
-\cref{ch:conclusions} summarises the obtained results and gives
-conclusions.
+\cref{ch:conclusions} summarises the obtained results with conclusions
+and outlook.
 
 % Different guard ring solutions for thin active-edge sensors and their
 % test beam results are introduced in
